@@ -1,3 +1,8 @@
+TAG: annotload-tr12540-1
+DATE:04/24/2017
+STAFF: sc
+CHANGES: annotload.py - remove call to ALL_postMP SP
+
 TAG: annotload-tr12540-BP
 DATE:04/24/2017
 STAFF: sc
